[ticket/11956] Fix responsive jumpbox
PHPBB3-11956

--- a/phpBB/styles/prosilver/theme/forms.css
+++ b/phpBB/styles/prosilver/theme/forms.css
@@ -206,7 +206,11 @@ fieldset.forum-selection2 {
 fieldset.jumpbox {
 	text-align: right;
 	margin-top: 15px;
-	height: 2.5em;
+	min-height: 2.5em;
+}
+
+fieldset.jumpbox select {
+	max-width: 50%;
 }
 
 fieldset.quickmod {
